build(pnpm): disable auto peer installs and link @drm/core via workspace to allow clean install; confirm npm test passes

--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "plugins",
     "posthog"
   ],
+  "devDependencies": {
+    "@drm/core": "workspace:*"
+  },
   "scripts": {
     "dev": "pnpm -r run dev",
     "build": "pnpm -r run build",
@@ -20,4 +23,3 @@
     "node": ">=20.0.0"
   }
 }
-
