--- a/.env.example
+++ b/.env.example
@@ -11,9 +11,15 @@ DATABASE_URL=postgres://app_user:strongpassword@db-prod.example.com:5432/devcle?
 REDIS_URL=redis://:strongpassword@redis-prod.example.com:6379/0
 
 # Optional analytics (Phase 4)
-# If using PostHog Cloud:
-POSTHOG_SITE_URL=https://app.posthog.com
-POSTHOG_API_KEY=phc_your_project_api_key_here
+# Development (local PostHog):
+# - If running PostHog on the same host: http://localhost:8000
+# - If using a docker compose service named `posthog`: http://posthog:8000
+POSTHOG_SITE_URL=http://localhost:8000
+POSTHOG_API_KEY=phc_local_dev_key_here
+
+# Production example (commented):
+# POSTHOG_SITE_URL=https://app.posthog.com
+# POSTHOG_API_KEY=phc_your_project_api_key_here
 
 # Nginx certificate mounts for production (bind mounts)
 # Set these to host file paths when running docker-compose in production.
