chore(dev): set POSTHOG_SITE_URL=https://ph.devcle.test and add nginx server for ph.devcle.test -> host PostHog :8000

--- a/.env.example
+++ b/.env.example
@@ -11,10 +11,8 @@ DATABASE_URL=postgres://app_user:strongpassword@db-prod.example.com:5432/devcle?
 REDIS_URL=redis://:strongpassword@redis-prod.example.com:6379/0
 
 # Optional analytics (Phase 4)
-# Development (local PostHog):
-# - If running PostHog on the same host: http://localhost:8000
-# - If using a docker compose service named `posthog`: http://posthog:8000
-POSTHOG_SITE_URL=http://localhost:8000
+# Development (local PostHog behind nginx at ph.devcle.test):
+POSTHOG_SITE_URL=https://ph.devcle.test
 POSTHOG_API_KEY=phc_local_dev_key_here
 
 # Production example (commented):
