--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -17,7 +17,7 @@ server {
   ssl_protocols TLSv1.2 TLSv1.3;
   ssl_prefer_server_ciphers on;
 
-  # Serve static files from the web container via reverse proxy.
+  # Reverse proxy to the web application container.
   location / {
     proxy_set_header Host $host;
     proxy_set_header X-Real-IP $remote_addr;
@@ -27,3 +27,27 @@ server {
   }
 }
 
+# Development PostHog endpoint via subdomain ph.devcle.test.
+# This proxies to PostHog running on the host machine at :8000.
+server {
+  listen 80;
+  listen 443 ssl http2;
+
+  server_name ph.devcle.test;
+
+  # TLS certificates (same mounted files)
+  ssl_certificate     /etc/nginx/devcle.crt;
+  ssl_certificate_key /etc/nginx/devcle.key;
+
+  ssl_protocols TLSv1.2 TLSv1.3;
+  ssl_prefer_server_ciphers on;
+
+  location / {
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
+    # Forward to PostHog running on the host at port 8000
+    proxy_pass http://host.docker.internal:8000;
+  }
+}
