feat(system-settings): implement database schema, encryption, and S3 client (Part 1)
Database Schema:
- Add service_name, logo_url, fiscal_year_start_month, timezone columns
- Add s3_settings, smtp_settings, ai_settings JSONB columns
- Add CHECK constraint for fiscal_year_start_month (1-12)
- Remove old individual columns, migrate to JSONB structure
- Migration: 0004_migrate_to_jsonb_settings.sql

Encryption Utilities:
- Implement AES-256-GCM encryption/decryption (core/utils/encryption.ts)
- Environment variable validation at startup (core/config/env.ts)
- Support key versioning for rotation (v1, v2, etc.)
- Add ENCRYPTION_KEY to .env.example with generation instructions

S3 Client:
- Implement S3 upload/delete operations (core/utils/s3-client.ts)
- Support AWS S3 and S3-compatible services (MinIO)
- Add connection testing functionality
- Install @aws-sdk/client-s3

Type Safety:
- Fix all TypeScript errors
- Use exactOptionalPropertyTypes
- Remove unused imports

Task 7.3.2 Progress: 4/13 completed (schema, encryption, S3, typecheck)
Remaining: upload middleware, service layer, API, UI, E2E tests

--- a/.env.example
+++ b/.env.example
@@ -35,6 +35,11 @@ NODE_ENV=production
 # Session secret for cookie signing (MUST be changed in production)
 # Generate a strong secret: openssl rand -base64 32
 SESSION_SECRET=change_this_secret_in_production
+# Encryption key for sensitive data (S3 keys, SMTP passwords, AI API keys)
+# MUST be exactly 32 bytes (256 bits) when base64-decoded
+# Generate: openssl rand -base64 32
+# IMPORTANT: Never commit this key. Use secrets manager in production.
+ENCRYPTION_KEY=change_this_encryption_key_in_production
 # Application domain (used for nginx server_name and application URLs)
 APP_DOMAIN=devcle.com
 
