--- a/core/package.json
+++ b/core/package.json
@@ -22,6 +22,7 @@
     "db:seed": "tsx db/seed.ts"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.913.0",
     "@headlessui/react": "^2.2.9",
     "@heroicons/react": "^2.2.0",
     "@iconify/react": "^6.0.2",
